--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
+  "name": "ast",
+  "version": "1.0.0",
+  "main": "index.html",
+  "scripts": {
+    "start": "parcel index.html --open"
+  },
   "dependencies": {
     "@babel/core": "^7.26.10",
     "ast-pretty-print": "^2.0.1",
     "babel-log": "^2.0.0",
-    "babylon": "^6.18.0"
+    "babylon": "^6.18.0",
+    "d3": "^3.5.17"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1",
+    "parcel-bundler": "^1.6.1"
   }
 }
