--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "rm -rf dist .cache && parcel index.html --open"
   },
   "dependencies": {
-    "@babel/core": "^7.26.10",
     "ast-pretty-print": "^2.0.1",
+    "babel-core": "^6.26.3",
     "babel-log": "^2.0.0",
     "babylon": "^6.18.0",
     "d3": "^3.5.17",
